--- a/package.json
+++ b/package.json
@@ -1,6 +1,38 @@
 {
+  "name": "jess-sang_portfolio",
+  "version": "1.0.0",
+  "type": "module",
+  "description": "Jess Sang's Portfolio",
+  "homepage": "https://github.com/jessmsang/jess-sang_portfolio#readme",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jessmsang/jess-sang_portfolio.git"
+  },
+  "license": "ISC",
+  "author": "Jess Sang",
+  "main": "main.jsx",
+  "scripts": {
+    "dev": "vite --open",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview",
+    "predeploy": "npm run build"
+  },
   "dependencies": {
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "react-router-dom": "^7.5.2"
+  },
+  "devDependencies": {
+    "@eslint/js": "^9.21.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
+    "@vitejs/plugin-react": "^4.3.4",
+    "eslint": "^9.21.0",
+    "eslint-plugin-react-hooks": "^5.1.0",
+    "eslint-plugin-react-refresh": "^0.4.19",
+    "gh-pages": "^6.3.0",
+    "globals": "^15.15.0",
+    "vite": "^6.2.0"
   }
 }
