--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "predeploy": "npm run build"
+    "predeploy": "npm run build",
+    "deploy": "npm run build && npx wrangler pages deploy dist"
   },
   "dependencies": {
     "react": "^19.1.1",
